# mobi-forge

./: .env.example  .gitignore  Cargo.toml  Dockerfile
catalog-search/: Cargo.toml  README.md  build.rs
catalog-search/src/: lib.rs  model.rs
catalog-tools/: Cargo.toml  README.md
catalog-tools/src/: main.rs
commerce-data/: Furniture.csv  Furniture.json  Variation.csv  Variation.json
config/: routes.json
migrations/: 20251022000001_init.sql  20251022000002_seed.sql
mock-data/store/pages/: about.json  catalog.json  home.json  product.json  search.json
mock-data/store/pages/products/: bamboo-toothbrush.json
src/: main.rs
src/app/: mod.rs
src/data/: mod.rs
src/db/: mod.rs  models.rs
src/http/: mod.rs
src/templates/: mod.rs
src/tenancy/: mod.rs
static/: .gitignore  catalog-search-app.js
templates/_shared/: index.html  layout.html
templates/_shared/macros/: products.jinja  utils.jinja
templates/_shared/partials/: footer.html  header.html
templates/demo/pages/: home.html
templates/store/: layout.html
templates/store/pages/: about.html  catalog.html  home.html  product.html  search.html
templates/store/partials/: footer.html  nav.html
