[package]
name = "catalog-search"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
bincode = "1"

[build-dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[dev-dependencies]
serde_path_to_error = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
