[package]
name = "catalog-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
catalog-search = { path = "../catalog-search" }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
